--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,8 +1,10 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: iLek2428 # Your GitHub organization or username, where this repository lives
+repo: dmg-monitor # The name of this repository
 
 sites:
+  - name: OBEC Academy
+    url: https://dlp.obec.go.th
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
@@ -15,7 +17,7 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: monitor.dmg.st
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
