Update website for monitor

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,26 +3,28 @@ owner: iLek2428 # Your GitHub organization or username, where this repository li
 repo: dmg-monitor # The name of this repository
 
 sites:
+  - name: Lannacom Academy
+    url: https://academy.lanna.co.th
   - name: OBEC Academy
     url: https://dlp.obec.go.th
+  - name: Beyond BU
+    url: https://beyond.bu.ac.th
+  - name: RMUTI MOOC
+    url: https://mooc.rmuti.ac.th
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
     url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: monitor.dmg.st
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  logoUrl: https://raw.githubusercontent.com/iLek2428/dmg-monitor/master/assets/dmg-logo.png
+  name: DMG - Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages.
   navbar:
     - title: Status
       href: /
